other-vpol/require-qos-burstable/.kyverno-test/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
  - name: qos-demo-ctr
    image: thisdoesnotexist:1.1.1
    resources:
      requests:
        memory: "200Mi"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  containers:
  - name: qos-demo-ctr
    image: thisdoesnotexist:1.1.1
    resources:
      limits:
        memory: "200Mi"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  containers:
  - name: qos-demo-ctr
    image: thisdoesnotexist:1.1.1
    resources:
      requests:
        memory: "200Mi"
        cpu: "700m"
  - name: seconddemo
    image: thisdoesnotexist:1.1.1
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
  - name: qos-demo-ctr
    image: thisdoesnotexist:1.1.1
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
  - name: qos-demo-ctr
    image: thisdoesnotexist:1.1.1
  - name: second
    image: thisdoesnotexist:1.1.1
---
apiVersion: v1
kind: Pod
metadata:
  name: guaranteed-pod
spec:
  containers:
  - name: qos-demo-ctr
    image: thisdoesnotexist:1.1.1
    resources:
      requests:
        cpu: "1"
        memory: "200Mi"
      limits:
        cpu: "1"
        memory: "200Mi"
---
apiVersion: v1
kind: Pod
metadata:
  name: zero-resources-pod
spec:
  containers:
  - name: qos-demo-ctr
    image: thisdoesnotexist:1.1.1
    resources:
      requests:
        cpu: "0"
        memory: "0"
---
apiVersion: v1
kind: Pod
metadata:
  name: zero-exponent-pod
spec:
  containers:
  - name: qos-demo-ctr
    image: thisdoesnotexist:1.1.1
    resources:
      requests:
        cpu: "0e3"
        memory: "0Mi"
