other-vpol/require-qos-burstable/.kyverno-test-exceptions/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata: {name: require-qos-burstable-exceptions}
policies: [../require-qos-burstable.yaml]
resources: [../.kyverno-test/resource.yaml]
exceptions: [../.kyverno-test/exceptions.yaml]
results:
- {kind: Pod, policy: require-qos-burstable, resources: [badpod01], result: pass, isValidatingPolicy: true}
